@@ -1,7 +1,8 @@
-@comment $NetBSD: PLIST,v 1.3 2004/01/25 20:27:40 wiz Exp $
+@comment $NetBSD: PLIST,v 1.4 2004/08/13 03:22:23 minskim Exp $
 lib/X11/fonts/TTF/batang.ttf
 lib/X11/fonts/TTF/dotum.ttf
 lib/X11/fonts/TTF/gulim.ttf
 lib/X11/fonts/TTF/hline.ttf
 share/doc/baekmuk-ttf/COPYRIGHT
+share/doc/baekmuk-ttf/COPYRIGHT.ks
 @dirrm share/doc/baekmuk-ttf
